recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: not found: value setps
	spiral(setps-1,angle,length+increment,increment)
               ^